--- a/trunk/Subs4me/.classpath
+++ b/trunk/Subs4me/.classpath
@@ -10,5 +10,6 @@
 	<classpathentry kind="lib" path="xercesImpl.jar"/>
 	<classpathentry kind="lib" path="ehcache.jar"/>
 	<classpathentry kind="lib" path="junrar-custom.jar"/>
+	<classpathentry kind="lib" path="commons-httpclient-3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
