--- a/trunk/Subs4me/.classpath
+++ b/trunk/Subs4me/.classpath
@@ -10,6 +10,8 @@
 	<classpathentry kind="lib" path="xercesImpl.jar"/>
 	<classpathentry kind="lib" path="ehcache.jar"/>
 	<classpathentry kind="lib" path="junrar-custom.jar"/>
-	<classpathentry kind="lib" path="commons-httpclient-3.1.jar"/>
+	<classpathentry kind="lib" path="httpclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="httpcore-4.0.1.jar"/>
+	<classpathentry kind="lib" path="commons-logging-1.1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
