almost ready wth download on demand for SRATIM

--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -16,6 +16,6 @@ handle_multipule_subtitles_default_directory=
 ###############################################################################
 #####################  Sratim.co.il  ##########################################  
 ###############################################################################
-sratim.username=crouprat
-sratim.password=Y5TfTT5W
+sratim.username=
+sratim.password=
 sratim.code=
