--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -5,7 +5,9 @@ get_subs_recursive=true
 get_subs_all=true
 get_subs_providers=opensubs,sratim,torec
 get_subs_check_exists=true
-get_subs_default_directory=
+get_subs_default_directory=Not Working Yet
+get_subs_download_movie_picture=true
+get_subs_download_movie_picture_force=true
 
 ###############################################################################
 # Handle Multiple Subtitles params
