--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -5,10 +5,11 @@ get_subs_recursive=true
 get_subs_all=true
 get_subs_providers=opensubs,sratim,torec
 get_subs_check_exists=true
-get_subs_default_directory=Not Working Yet
 get_subs_download_movie_picture=true
 get_subs_download_movie_picture_force=true
+get_subs_use_parent_dirname_as_moviename=false
 
+get_subs_default_directory=Not Working Yet
 ###############################################################################
 # Handle Multiple Subtitles params
 ###############################################################################
@@ -16,8 +17,22 @@ handle_multipule_subtitles_recursive=true
 handle_multipule_subtitles_default_directory=
 
 ###############################################################################
+# Launcher
+# getsubs - run getsubs only
+# handlemultiplesubs - run handlemultiplesubs only
+# waitforit - count 5 seconds and if the user presses the keyboard at that time, 
+#	move to the next operation
+#	This is for automation, no need to go interactive if the user runs this every 4 hours (timed event).
+# waitforitdonothing - count 5 seconds and if the user presses the keyboard at that time, DO NOT move to the next operation.
+#	This is for regular activities.
+# these can be added seperated by "," i.e: getsubs /r /all,waitforit,handlemultiplesubs /r
+###############################################################################
+launch=getsubs,waitforit,handlemultiplesubs /r
+
+###############################################################################
 #####################  Sratim.co.il  ##########################################  
 ###############################################################################
 sratim.username=
 sratim.password=
 sratim.code=
+
