change: new default_launch property that accepts launch configuration name (any name), must be configured in file:  			default_launch=launch1  			launch1=getsubs,waitforit,handlemultiplesubs /r  change: now accepting more than 1 source directory/file as paramaters - because sometimes I want to look for a few dirs together...  			i.e - getsubs c:\1 c:\2  change: get_subs_default_directories now should work. put directorys/files seprated by comma.  		 handle_multipule_subtitles_default_directories now should work. put directorys/files seprated by comma.

--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -5,16 +5,23 @@ get_subs_recursive=true
 get_subs_all=true
 get_subs_providers=opensubs,sratim,torec
 get_subs_check_exists=true
-get_subs_download_movie_picture=true
-get_subs_download_movie_picture_force=true
+get_subs_download_movie_picture=false
+get_subs_download_movie_picture_force=false
 get_subs_use_parent_dirname_as_moviename=false
 
-get_subs_default_directory=Not Working Yet
+# Default directories (can be more than one) separated by comma. used when no paramter for destinatations is specified
+# this is a java properties file so use \\ or / as directory seperator
+# all the directories MUST be VALID
+get_subs_default_directories=
 ###############################################################################
 # Handle Multiple Subtitles params
 ###############################################################################
 handle_multipule_subtitles_recursive=true
-handle_multipule_subtitles_default_directory=
+
+# Default directories (can be more than one) separated by comma. used when no paramter for destinatations is specified
+# this is a java properties file so use \\ or / as directory seperator
+# all the directories MUST be VALID
+handle_multipule_subtitles_default_directories=
 
 ###############################################################################
 # Launcher
@@ -27,8 +34,10 @@ handle_multipule_subtitles_default_directory=
 #	This is for regular activities.
 # these can be added seperated by "," i.e: getsubs /r /all,waitforit,handlemultiplesubs /r
 ###############################################################################
-launch=getsubs,waitforit,handlemultiplesubs /r
-
+default_launch=launch1
+launch1=getsubs,waitforit,handlemultiplesubs /r
+#	Launcher without sratim
+launch2=getsubs /p=opensubs,torec,waitforit,handlemultiplesubs /r
 ###############################################################################
 #####################  Sratim.co.il  ##########################################  
 ###############################################################################
