change def params

--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -5,8 +5,8 @@ get_subs_recursive=true
 get_subs_all=true
 get_subs_providers=opensubs,sratim,torec
 get_subs_check_exists=true
-get_subs_download_movie_picture=false
-get_subs_download_movie_picture_force=false
+get_subs_download_movie_picture=true
+get_subs_download_movie_picture_force=true
 get_subs_use_parent_dirname_as_moviename=false
 
 # Default directories (can be more than one) separated by comma. used when no paramter for destinatations is specified
@@ -34,10 +34,11 @@ handle_multipule_subtitles_default_directories=
 #	This is for regular activities.
 # these can be added seperated by "," i.e: getsubs /r /all,waitforit,handlemultiplesubs /r
 ###############################################################################
-default_launch=launch1
-launch1=getsubs,waitforit,handlemultiplesubs /r
-#	Launcher without sratim
-launch2=getsubs /p=opensubs,torec,waitforit,handlemultiplesubs /r
+default_launch=intetractive
+#   first look if we tried before, then retry and then finally see if we need to handlemoresubs again
+intetractive=handlemultiplesubs,getsubs,handlemultiplesubs
+#	automatic job, just find subtitles no more, and do not handle extra subs
+justgetsubs=getsubs
 ###############################################################################
 #####################  Sratim.co.il  ##########################################  
 ###############################################################################
