changed the getsubsonly to a more precise name

--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -38,7 +38,7 @@ default_launch=intetractive
 #   first look if we tried before, then retry and then finally see if we need to handlemoresubs again
 intetractive=handlemultiplesubs,getsubs,handlemultiplesubs
 #	automatic job, just find subtitles no more, and do not handle extra subs
-justgetsubs=getsubs
+justgetsubswithexitcodes=getsubs /useExitCodes
 ###############################################################################
 #####################  Sratim.co.il  ##########################################  
 ###############################################################################
