--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -8,6 +8,7 @@ get_subs_check_exists=true
 get_subs_download_movie_picture=true
 get_subs_download_movie_picture_force=true
 get_subs_use_parent_dirname_as_moviename=false
+use_opensubs_for_file_name_realization=false
 
 # Default directories (can be more than one) separated by comma. used when no paramter for destinatations is specified
 # this is a java properties file so use \\ or / as directory seperator
