--- a/trunk/Subs4me/Compiled/properties/subs4me-default.properties
+++ b/trunk/Subs4me/Compiled/properties/subs4me-default.properties
@@ -3,7 +3,7 @@
 ###############################################################################
 get_subs_recursive=true
 get_subs_all=true
-get_subs_providers=opensubs,sratim,torec
+get_subs_providers=sratim,torec
 get_subs_check_exists=true
 get_subs_download_movie_picture=true
 get_subs_download_movie_picture_force=true
